Prepare to publish the package in atom.io

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ script:
 
 notifications:
   email:
-    on_success: never
-    on_failure: change
+    recipients:
+      - calpaliu@gmail.com
+    on_success: always
+    on_failure: always
 
 branches:
   only:
